# Shadow-Bid

./: .env.example  .gitignore  ANALISIS_FITUR_GUIDE.md  APPLY_V2_19_CHANGES.md  ARC21_TOKEN_REGISTRY_SOLUTION.md  ASSET_CATEGORIES_QUICK_REF.md  ASSET_CATEGORIZATION_DESIGN.md  ASSET_CATEGORY_DECISION_TREE.md  ASSET_CATEGORY_WORKFLOWS.md  BIDDER_2_ISSUE_SUMMARY.md  BIDDER_NOTIFICATION_SYSTEM.md  BID_POLICY_SUMMARY.md  BID_UPDATE_POLICY.md  CANCEL_REFUND_FEATURES.md  CLAIM_WINNING_ALEO_ERROR_ANALYSIS.md  CLEANUP_SUMMARY.md  CONTRACT_VERSION_INDICATOR.md  FLAGSHIP_ALEO_APP_ANALYSIS.md  FORCE_V2_18_MIGRATION.md  HYBRID_V2_17_IMPLEMENTATION.md  PERBAIKAN_PRIVATE_BID_SUMMARY.md  PREMIUM_QUICK_START.md  PREMIUM_UI_ACTIVE.md  PREMIUM_UI_COMPLETE.md  PREMIUM_UI_FEATURES_COMPLETE.md  PREMIUM_UI_IMPLEMENTATION.md  PREMIUM_VISUAL_GUIDE.md  PRIVATE_BID_DEBUG_GUIDE.md  PRIVATE_BID_SERVICE_FIX.md  PRIVATE_BID_SUCCESS_UI.md  PRIVATE_BID_TEMPORARY_DISABLE.md  PROJECT_README.md  QUICK_TEST_PRIVATE_BID.md  QUICK_TEST_REFERENCE.md  README.md  READY_TO_TEST_PRIVATE_BID.md  RWA_PAYMENT_MECHANISM_DESIGN.md  RWA_PHOTO_UPLOAD_GUIDE.md  SECOND_BIDDER_REJECTION_FIX.md  SELLER_BID_DETECTION_FIX.md  (+41 more)
contracts/: README.md  program.json
docs/: README.md
frontend/: .env.local.example  README.md  package-lock.json  package.json  vite.config.js
scripts/v223/snarkvm_freezelist_helper/: Cargo.toml
scripts/v223/snarkvm_freezelist_helper/src/: main.rs
shadowbid-marketplace/: .env.local.example  INTEGRATION.md  LOCAL_STORAGE.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  index.html  (+4 more)
(+205 files in other folders)
